<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="home_title">My App Portfolio</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="football_scores">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone_app">Capstone: My Own App</string>

</resources>
